# SensorApi

./: README.txt
SensorApi/: CMakeLists.txt  SensorApi  config
SensorApi/src/: Aggregate.h  Aht10Driver.cpp  Aht10Driver.h  Aht10Humidity.cpp  Aht10Humidity.h  Aht10Temperature.cpp  Aht10Temperature.h  Configuration.cpp  Configuration.h  Iterator.h  List.h  ListIterator.h  Measurement.cpp  Measurement.h  Sensor.h  SensorFactory.cpp  SensorFactory.h  SensorMonitor.cpp  SensorMonitor.h  Utils.cpp  Utils.h  WeatherData.cpp  WeatherData.h  WebApi.cpp  WebApi.h  config  main.cpp
